<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Principal" >

    <TextView
        android:id="@+id/tv"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.26"
        android:gravity="right|center_vertical"
        android:text="0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btClear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="limpiar"
            android:text="@string/btClear" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.00" >

        <Button
            android:id="@+id/btSiete"
            android:layout_width="wrap_content"
            android:layout_height="71dp"
            android:layout_weight="0.45"
            android:onClick="numeros"
            android:text="@string/btSiete" />

        <Button
            android:id="@+id/btOcho"
            android:layout_width="wrap_content"
            android:layout_height="71dp"
            android:layout_weight="0.45"
            android:onClick="numeros"
            android:text="@string/btOcho" />

        <Button
            android:id="@+id/btNuevo"
            android:layout_width="wrap_content"
            android:layout_height="71dp"
            android:layout_weight="0.45"
            android:onClick="numeros"
            android:text="@string/btNueve" />

        <Button
            android:id="@+id/btDividir"
            android:layout_width="wrap_content"
            android:layout_height="71dp"
            android:layout_weight="0.45"
            android:onClick="simbolos"
            android:text="@string/btDividir" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.00" >

        <Button
            android:id="@+id/btCuatro"
            android:layout_width="wrap_content"
            android:layout_height="71dp"
            android:layout_weight="0.45"
            android:onClick="numeros"
            android:text="@string/btCuatro" />

        <Button
            android:id="@+id/btCinco"
            android:layout_width="wrap_content"
            android:layout_height="71dp"
            android:layout_weight="0.45"
            android:onClick="numeros"
            android:text="@string/btCinco" />

        <Button
            android:id="@+id/btSeis"
            android:layout_width="wrap_content"
            android:layout_height="71dp"
            android:layout_weight="0.45"
            android:onClick="numeros"
            android:text="@string/btSeis" />

        <Button
            android:id="@+id/btMultiplicar"
            android:layout_width="wrap_content"
            android:layout_height="71dp"
            android:layout_weight="0.45"
            android:onClick="simbolos"
            android:text="@string/btMultiplicar" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.00" >

        <Button
            android:id="@+id/btUno"
            android:layout_width="wrap_content"
            android:layout_height="71dp"
            android:layout_weight="0.45"
            android:onClick="numeros"
            android:text="@string/btUno" />

        <Button
            android:id="@+id/btDos"
            android:layout_width="wrap_content"
            android:layout_height="71dp"
            android:layout_weight="0.45"
            android:onClick="numeros"
            android:text="@string/btDos" />

        <Button
            android:id="@+id/btTres"
            android:layout_width="wrap_content"
            android:layout_height="71dp"
            android:layout_weight="0.45"
            android:onClick="numeros"
            android:text="@string/btTres" />

        <Button
            android:id="@+id/btMenos"
            android:layout_width="wrap_content"
            android:layout_height="71dp"
            android:layout_weight="0.45"
            android:onClick="simbolos"
            android:text="@string/btRestar" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.00" >

        <Button
            android:id="@+id/btPunto"
            android:layout_width="wrap_content"
            android:layout_height="71dp"
            android:layout_weight="0.45"
            android:onClick="simbolos"
            android:text="@string/btPunto" />

        <Button
            android:id="@+id/btCero"
            android:layout_width="wrap_content"
            android:layout_height="71dp"
            android:layout_weight="0.45"
            android:onClick="numeros"
            android:text="@string/btCero" />

        <Button
            android:id="@+id/btIgual"
            android:layout_width="wrap_content"
            android:layout_height="71dp"
            android:layout_weight="0.45"
            android:onClick="simbolos"
            android:text="@string/btIgual" />

        <Button
            android:id="@+id/btSumar"
            android:layout_width="wrap_content"
            android:layout_height="71dp"
            android:layout_weight="0.45"
            android:onClick="simbolos"
            android:text="@string/btSumar" />
    </LinearLayout>

</LinearLayout>